# ps4_nid_resolver_ida

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  elf.h  ida_plugin.cpp  ida_plugin.h  ida_plugin_settings.cpp  ida_settings.cpp  ida_settings.h  main.cpp  main.h  ps4.cpp  ps4.h
